--- a/package.json
+++ b/package.json
@@ -1,35 +1,34 @@
 {
-  "name": "strapi-postgres",
+  "name": "afkbuilder-api",
   "private": true,
   "version": "0.1.0",
-  "description": "A Strapi application",
+  "description": "Database API for AFKBuilder using Strapi",
   "scripts": {
-    "develop": "strapi develop",
+    "dev": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
     "strapi": "strapi"
   },
   "devDependencies": {},
   "dependencies": {
-    "knex": "<0.20.0",
+    "jquery": "^1.9.1",
+    "knex": "^0.21.18",
     "pg": "^8.3.3",
     "pg-connection-string": "^2.4.0",
     "sqlite3": "latest",
-    "strapi": "3.4.5",
-    "strapi-admin": "3.4.5",
-    "strapi-connector-bookshelf": "3.4.5",
-    "strapi-plugin-content-manager": "3.4.5",
-    "strapi-plugin-content-type-builder": "3.4.5",
-    "strapi-plugin-email": "3.4.5",
-    "strapi-plugin-upload": "3.4.5",
-    "strapi-plugin-users-permissions": "3.4.5",
-    "strapi-utils": "3.4.5"
+    "strapi": "^3.6.8",
+    "strapi-admin": "^3.6.8",
+    "strapi-connector-bookshelf": "^3.6.8",
+    "strapi-plugin-content-manager": "^3.6.8",
+    "strapi-plugin-content-type-builder": "^3.6.8",
+    "strapi-plugin-email": "^3.6.8",
+    "strapi-plugin-graphql": "^3.6.8",
+    "strapi-plugin-upload": "^3.6.8",
+    "strapi-plugin-users-permissions": "^3.6.8",
+    "strapi-utils": "^3.6.8"
   },
   "author": {
-    "name": "A Strapi developer"
-  },
-  "strapi": {
-    "uuid": "fd1159cd-5981-4881-877c-3cacd7f6dbf9"
+    "name": "Dae314"
   },
   "engines": {
     "node": ">=10.0.0",
