Add afkbuilder_user and add a field to comps that auto-maps the logged in user to the afkbuilder_user

--- a/api/comps/models/comps.settings.json
+++ b/api/comps/models/comps.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "comps",
   "info": {
-    "name": "comps"
+    "name": "comps",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -36,6 +37,11 @@
     },
     "comp_string": {
       "type": "text"
+    },
+    "afkbuilder_user": {
+      "plugin": "users-permissions",
+      "model": "user",
+      "via": "comps"
     }
   }
 }
