Upgrade to Strapi 4.0.0

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "afkbuilder-api",
+  "name": "afk-builder-api",
   "private": true,
   "version": "0.1.0",
   "description": "Database API for AFKBuilder using Strapi",
@@ -11,28 +11,17 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "jquery": "^1.12.4",
-    "knex": "^0.21.21",
-    "pg": "^8.7.1",
-    "pg-connection-string": "^2.5.0",
-    "sqlite3": "^5.0.2",
-    "strapi": "^3.6.8",
-    "strapi-admin": "^3.6.8",
-    "strapi-connector-bookshelf": "^3.6.8",
-    "strapi-plugin-content-manager": "^3.6.8",
-    "strapi-plugin-content-type-builder": "^3.6.8",
-    "strapi-plugin-email": "^3.6.8",
-    "strapi-plugin-graphql": "^3.6.8",
-    "strapi-plugin-upload": "^3.6.8",
-    "strapi-plugin-users-permissions": "^3.6.8",
-    "strapi-utils": "^3.6.8",
-    "ua-parser-js": "^0.7.30"
+    "@strapi/plugin-graphql": "4.0.0",
+    "@strapi/plugin-i18n": "4.0.0",
+    "@strapi/plugin-users-permissions": "4.0.0",
+    "@strapi/strapi": "4.0.0",
+    "sqlite3": "5.0.2"
   },
   "author": {
     "name": "Dae314"
   },
   "engines": {
-    "node": ">=10.0.0",
+    "node": ">=12.x.x <=16.x.x",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
