--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@strapi/plugin-users-permissions": "4.0.2",
     "@strapi/strapi": "4.0.2",
     "koa-session2": "^2.2.10",
+    "simple-node-logger": "^21.8.12",
     "sqlite3": "5.0.2"
   },
   "author": {
