--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "@stdlib/dist-stats-base-dists-flat": "^0.0.96",
     "@strapi/plugin-graphql": "4.0.6",
     "@strapi/plugin-i18n": "4.0.6",
     "@strapi/plugin-users-permissions": "4.0.6",
