--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@strapi/plugin-i18n": "4.0.6",
     "@strapi/plugin-users-permissions": "4.0.6",
     "@strapi/strapi": "4.0.6",
+    "graphql-type-json": "^0.3.2",
     "pg": "^8.7.1",
     "sqlite3": "5.0.2",
     "winston": "^3.4.0",
