--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
-JWT_SECRET=0087934d-ed58-4a02-8acc-20619abed219
-API_TOKEN_SALT=7d672aa2386c8826871b8785c51878ed
+JWT_SECRET=<random string>
+API_TOKEN_SALT=<random string>
 HOST=0.0.0.0
 PORT=1337
+URL=http://localhost:1337
+BUILD_TYPE=development
+CRON_ENABLED=false
+APP_KEYS=[<random string>, <random string>]
+DEFAULT_USER_ID=1
