Fix typo in render.yaml

--- a/render.yaml
+++ b/render.yaml
@@ -22,7 +22,7 @@ services:
         fromDatabase:
           name: afkbuilder_strapi
           property: connectionString
-      - KEY: DATABASE_PORT
+      - key: DATABASE_PORT
         fromDatabase:
           name: afkbuilder_strapi
           property: port
