Update Strapi to v4.1.8

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
 JWT_SECRET=<random string>
 API_TOKEN_SALT=<random string>
+ADMIN_JWT_SECRET=<random string>
+APP_KEYS=[<random string>, <random string>]
 HOST=0.0.0.0
 PORT=1337
 URL=http://localhost:1337
 BUILD_TYPE=development
 CRON_ENABLED=false
-APP_KEYS=[<random string>, <random string>]
 DEFAULT_USER_ID=1
